--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -1,30 +1,52 @@
 version: "3.9"
 
-
 services:
-  count-logger:
-    image: ubuntu:20.04
-    entrypoint: /bin/bash -c "while true; do date; sleep 1; done"
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: "udp://localhost:5000"
-        tag: "count-logger"
-        
-  linux-server:
-    build:
-      context: linux-server
-      dockerfile: Dockerfile
-    container_name: linux-server
-    hostname: linux-server
-    ports:
-      - 2222:22
-    logging:
-      driver: "syslog"
-      options:
-        syslog-address: "udp://localhost:5044"
-        tag: "linux-server"
+  # count-logger:
+  #   image: ubuntu:20.04
+  #   entrypoint: /bin/bash -c "while true; do date; sleep 1; done"
+  #   logging:
+  #     driver: "gelf"
+  #     options:
+  #       gelf-address: "udp://localhost:5000"
+  #       tag: "count-logger"
 
+  # linux-server:
+  #   build:
+  #     context: linux-server
+  #     dockerfile: Dockerfile
+  #   container_name: linux-server
+  #   hostname: linux-server
+  #   ports:
+  #     - 2222:22
+  #   logging:
+  #     driver: "syslog"
+  #     options:
+  #       syslog-address: "udp://localhost:5044"
+  #       tag: "linux-server"
+
+  web-server:
+    build: 
+      context: web-server
+      dockerfile: Dockerfile
+    container_name: web-server
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    volumes:
+        - ./web-server/app:/app
+    ports:
+      - 8000:8000
+
+  # database:
+  #   image: postgres:alpine3.18
+  #   container_name: database
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     POSTGRES_PASSWORD: postgres
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_DB: postgres
+  #   volumes:
+  #     - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    
 networks:
   default:
     name: elk
