--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -34,9 +34,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRESQL_PASSWORD: postgres
-      POSTGRESQL_USER: postgres
-      POSTGRESQL_DATABASE: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DATABASE: postgres
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     
