--- a/elk/logstash/pipeline/database.conf
+++ b/elk/logstash/pipeline/database.conf
@@ -1,13 +1,13 @@
 input {
- syslog {
-      port => 5044
+  beats {
+      port => 5013
       }
 }
 
 output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
-      index => "linux-server"
+      index => "database-%{[@metadata][version]}"
       }
  stdout{}
 }
