--- a/elk/logstash/pipeline/database.conf
+++ b/elk/logstash/pipeline/database.conf
@@ -1,13 +1,13 @@
 input {
   beats {
-      port => 5013
-      }
+      port => 5014
+    }
 }
 
 output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
-      index => "database-%{[@metadata][version]}"
-      }
+      index => "database-%{+YYYY.MM.dd}"
+    }
  stdout{}
 }
