--- a/elk/logstash/pipeline/linux-server.conf
+++ b/elk/logstash/pipeline/linux-server.conf
@@ -1,13 +1,15 @@
-input {
- syslog {
-      port => 5044
-      }
+input{
+     syslog {
+          port => 5044
+     }
 }
 
+
 output {
- elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
-      index => "linux-server"
-      }
- stdout{}
+     stdout{}
+     elasticsearch {
+          hosts => ["elasticsearch:9200"]
+          index => "syslog-%{+YYYY.MM.dd}"
+     }
+ 
 }
