--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3.9"
 
 services:
-  # linux-server:
-  #   build:
-  #     context: linux-server
-  #     dockerfile: Dockerfile
-  #   container_name: linux-server
-  #   hostname: linux-server
-  #   ports:
-  #     - 2222:22
-  #   logging:
-  #     driver: "gelf"
-  #     options:
-  #       gelf-address: "udp://localhost:5000"
-  #       tag: "linux-server"
+  linux-server:
+    build:
+      context: linux-server
+      dockerfile: Dockerfile
+    container_name: linux-server
+    hostname: linux-server
+    ports:
+      - 2222:22
+    # logging:
+    #   driver: "gelf"
+    #   options:
+    #     gelf-address: "udp://localhost:5000"
+    #     tag: "linux-server"
 
   web-server:
     build: 
