--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -26,12 +26,14 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - ./logstash/config/pipelines.yml:/usr/share/logstash/config/pipelines.yml:ro
     ports:
       - 5000-5100:5000-5100
       - 5000-5100:5000-5100/udp
       - 12201:12201
     depends_on:
       - elasticsearch
+    command: --config.reload.automatic 
     env_file: .env
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
