--- a/elk/logstash/pipeline/database-beat.conf
+++ b/elk/logstash/pipeline/database-beat.conf
@@ -11,10 +11,18 @@ filter {
   }
 }
 
+filter {
+  ruby {
+    code => '
+      event.set("raw", event.to_hash.to_json)
+    '
+  }
+}
+
 # only keep the message field, @timestamp and agent metadata
 filter {
   prune {
-    whitelist_names => ["message", "@timestamp", "[@metadata][beat]", "[@metadata][version]"]
+    whitelist_names => ["message", "@timestamp", "[@metadata]", "raw"]
   }
 }
 
@@ -28,7 +36,7 @@ filter {
 output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
-      index => "database-%{+YYYY.MM.dd}"
+      index => "database-beat-%{+YYYY.MM.dd}"
     }
  stdout{}
 }
