--- a/elk/logstash/pipeline/database.conf
+++ b/elk/logstash/pipeline/database.conf
@@ -1,7 +1,17 @@
 input {
-  beats {
-      port => 5014
-    }
+  file {
+    path => "/app/logs/database/*.log"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
+  }
+}
+
+filter {
+  ruby {
+    code => '
+      event.set("raw", event.to_hash.to_json)
+    '
+  }
 }
 
 output {
