--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/postgres
     volumes:
         - ./web-server/app:/app
+        - ../logs/web-server:/app/logs
     ports:
       - 8000:8000
     depends_on:
