:bug: fix filebeat configuration for web-server
Co-authored-by: Agustin Jerusalinsky <ajerusalinsky@itba.edu.ar>

--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -45,12 +45,11 @@ services:
       context: web-server
       dockerfile: Dockerfile
     container_name: web-server
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/postgres
     volumes:
         - ./web-server/app:/app
-        - ../logs/web-server:/app/logs
+        - ../logs/web-server:/var/log/app
     ports:
       - 8000:8000
     depends_on:
