--- a/dummy-servers/web-server/filebeat.yml
+++ b/dummy-servers/web-server/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
 - type: filestream
   id: filebeat-web-server-logs
   paths:
-    - /app/logs/*.log
+    - /var/log/app/*.log
   index: filebeat-web-server-logs
 
 output.logstash:
