linux and windows server filebeat

--- a/dummy-servers/linux-server/Dockerfile
+++ b/dummy-servers/linux-server/Dockerfile
@@ -1,9 +1,10 @@
 #linux server with ssh
 FROM ubuntu:20.04
-RUN apt-get update && apt-get install -y openssh-server
+RUN apt-get update && apt-get install -y openssh-server curl rsyslog
 
-#install syslog
-RUN apt-get install -y rsyslog
+#create ssh directory
+RUN mkdir /var/run/sshd
+
 
 #configure rsyslog to remote server
 RUN echo "*.* @logstash:5044" >> /etc/rsyslog.conf
@@ -16,6 +17,17 @@ RUN sed -i '/imklog/s/^/#/' /etc/rsyslog.conf
 RUN useradd -m -d /home/redes -s /bin/bash redes
 RUN echo 'redes:redes' | chpasswd
 
-RUN mkdir /var/run/sshd
+#install filebeat
+RUN curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.17.10-amd64.deb
+RUN dpkg -i filebeat-7.17.10-amd64.deb
 
-ENTRYPOINT service rsyslog start && /usr/sbin/sshd -D
+#enable system module
+RUN filebeat modules enable system
+
+#copy filebeat config
+COPY filebeat.yml /etc/filebeat/filebeat.yml
+RUN chmod go-w /etc/filebeat/filebeat.yml
+
+
+#ENTRYPOINT filebeat setup
+ENTRYPOINT service filebeat start; service rsyslog start && /usr/sbin/sshd -D
