--- a/elk/logstash/pipeline/windows-server.conf
+++ b/elk/logstash/pipeline/windows-server.conf
@@ -1,6 +1,6 @@
 input{
-     syslog {
-          port => 5044
+     beats {
+          port => 5050
      }
 }
 
@@ -9,7 +9,7 @@ output {
      #stdout{}
      elasticsearch {
           hosts => ["elasticsearch:9200"]
-          index => "syslog-%{+YYYY.MM.dd}"
+          index => "windows-%{+YYYY.MM.dd}"
      }
  
 }
