--- a/elk/logstash/config/pipelines.yml
+++ b/elk/logstash/config/pipelines.yml
@@ -12,3 +12,6 @@
 
 - pipeline.id: web-server-beat
   path.config: "/usr/share/logstash/pipeline/web-server-beat.conf"
+  
+- pipeline.id: windows-server
+  path.config: "/usr/share/logstash/pipeline/windows-server.conf"
