--- a/elk/logstash/config/pipelines.yml
+++ b/elk/logstash/config/pipelines.yml
@@ -15,3 +15,6 @@
   
 - pipeline.id: windows-server-beat
   path.config: "/usr/share/logstash/pipeline/windows-server-beat.conf"
+
+- pipeline.id: windows-server
+  path.config: "/usr/share/logstash/pipeline/windows-server.conf"
