--- a/elk/logstash/pipeline/database-beat.conf
+++ b/elk/logstash/pipeline/database-beat.conf
@@ -37,6 +37,8 @@ output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "database-beat-%{+YYYY.MM.dd}"
+      user => "elastic"
+      password => "elastic"
     }
  stdout{}
 }
