--- a/elk/logstash/pipeline/windows-server-beat.conf
+++ b/elk/logstash/pipeline/windows-server-beat.conf
@@ -55,6 +55,8 @@ output {
      elasticsearch {
           hosts => ["elasticsearch:9200"]
           index => "windows-beat-%{+YYYY.MM.dd}"
+          user => "elastic"
+          password => "elastic"
      }
  
 }
