--- a/dummy-servers/docker-compose.yml
+++ b/dummy-servers/docker-compose.yml
@@ -6,14 +6,14 @@ networks:
     external: true
 
 services:
-  # linux-server:
-  #   build:
-  #     context: linux-server
-  #     dockerfile: Dockerfile
-  #   container_name: linux-server
-  #   hostname: linux-server
-  #   ports:
-  #     - 2222:22
+  linux-server:
+    build:
+      context: linux-server
+      dockerfile: Dockerfile
+    container_name: linux-server
+    hostname: linux-server
+    ports:
+      - 2222:22
     # logging:
     #   driver: "gelf"
     #   options:
