--- a/elk/logstash/config/logstash.yml
+++ b/elk/logstash/config/logstash.yml
@@ -1,3 +1,7 @@
 http.host: "0.0.0.0"
 node.name: logstash
-log.level: debug
+log.level: info
+
+# enable security
+xpack.monitoring.elasticsearch.username: "logstash_system"
+xpack.monitoring.elasticsearch.password: "elastic"
