--- a/elk/logstash/pipeline/database.conf
+++ b/elk/logstash/pipeline/database.conf
@@ -18,6 +18,8 @@ output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "database-%{+YYYY.MM.dd}"
+      user => "elastic"
+      password => "elastic"
     }
  stdout{}
 }
