--- a/elk/logstash/pipeline/linux-server.conf
+++ b/elk/logstash/pipeline/linux-server.conf
@@ -10,6 +10,8 @@ output {
      elasticsearch {
           hosts => ["elasticsearch:9200"]
           index => "syslog-%{+YYYY.MM.dd}"
+          user => "elastic"
+          password => "elastic"
      }
  
 }
