--- a/elk/logstash/pipeline/web-server-beat.conf
+++ b/elk/logstash/pipeline/web-server-beat.conf
@@ -23,6 +23,8 @@ output {
  elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "web-server-beat-%{+YYYY.MM.dd}"
+      user => "elastic"
+      password => "elastic"
     }
  stdout{}
 }
