--- a/elk/logstash/pipeline/windows-server.conf
+++ b/elk/logstash/pipeline/windows-server.conf
@@ -16,6 +16,8 @@ output {
      elasticsearch {
           hosts => ["elasticsearch:9200"]
           index => "windows-%{+YYYY.MM.dd}"
+          user => "elastic"
+          password => "elastic"
      }
      stdout { codec => rubydebug }
 }
