--- a/elk/logstash/config/pipelines.yml
+++ b/elk/logstash/config/pipelines.yml
@@ -18,3 +18,6 @@
 
 - pipeline.id: windows-server
   path.config: "/usr/share/logstash/pipeline/windows-server.conf"
+
+- pipeline.id: service-unavailable
+  path.config: "/usr/share/logstash/pipeline/alerts/service-unavailable-alert.conf"
